RESOLVED FIXED23627
PLATFORM(SKIA) build bustage in SVGPaintServer.cpp
https://bugs.webkit.org/show_bug.cgi?id=23627
Summary PLATFORM(SKIA) build bustage in SVGPaintServer.cpp
Darin Fisher (:fishd, Google)
Reported 2009-01-29 15:18:47 PST
PLATFORM(SKIA) build bustage in SVGPaintServer.cpp Simple patch coming up...
Attachments
v1 patch (1.39 KB, patch)
2009-01-29 15:19 PST, Darin Fisher (:fishd, Google)
darin: review-
v2 patch (1.90 KB, patch)
2009-01-29 15:32 PST, Darin Fisher (:fishd, Google)
no flags
v3 patch (1.90 KB, patch)
2009-01-29 15:35 PST, Darin Fisher (:fishd, Google)
darin: review+
Darin Fisher (:fishd, Google)
Comment 1 2009-01-29 15:19:31 PST
Created attachment 27164 [details] v1 patch
mitz
Comment 2 2009-01-29 15:20:53 PST
Comment on attachment 27164 [details] v1 patch I wonder if this won't trigger the unused parameters warning on non-Skia platforms.
Darin Fisher (:fishd, Google)
Comment 3 2009-01-29 15:22:39 PST
Oh, I didn't realize that warning was enabled. I guess I could move the entire function into the #ifdef.
Darin Adler
Comment 4 2009-01-29 15:28:10 PST
Comment on attachment 27164 [details] v1 patch This will break the build on Mac OS X unless you use UNUSED_PARAM when it's not PLATFORM(SKIA).
Darin Fisher (:fishd, Google)
Comment 5 2009-01-29 15:32:01 PST
Created attachment 27165 [details] v2 patch
Darin Adler
Comment 6 2009-01-29 15:33:43 PST
Comment on attachment 27165 [details] v2 patch > +#else > +void SVGPaintServer::teardown(GraphicsContext*&, const RenderObject*, SVGPaintTargetType, bool) const > +{ > +#endif Missing a brace here. Please fix that!
Darin Fisher (:fishd, Google)
Comment 7 2009-01-29 15:35:47 PST
Created attachment 27167 [details] v3 patch 3rd times a charm :)
Eric Seidel (no email)
Comment 8 2009-01-29 16:08:53 PST
I don't understand why this is necessary? Why doesn't Skia want the standard "teardown" function? Skia should be using the standard PatternSkia.cpp and GradientSkia.cpp abstractions instead of any custom SVGPaintServer* classes these days...
Darin Fisher (:fishd, Google)
Comment 9 2009-01-29 16:30:27 PST
That's a great question. I think the FIXME implies a desire to clean that up. I was just hoping to "fix bustage" in existing code. Can I postpone cleanup to a subsequent bug?
Eric Seidel (no email)
Comment 10 2009-01-29 16:34:06 PST
Comment on attachment 27167 [details] v3 patch Oh, I'm sorry. I thought you were adding the #ifdefs, I didn't realize they were already there. Yes, this is totally fine.
Darin Fisher (:fishd, Google)
Comment 11 2009-01-29 16:40:07 PST
Note You need to log in before you can comment on or make changes to this bug.