2009-01-29  Darin Fisher  <darin@chromium.org>

Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=23627
        Fix the PLATFORM(SKIA) build.

        * svg/graphics/SVGPaintServer.cpp:
        (WebCore::SVGPaintServer::teardown):



git-svn-id: svn://svn.chromium.org/blink/trunk@40385 bbb929c8-8fbe-4397-9dbb-9b2b20218538